# bpy

./: .gitignore  README.md  pyproject.toml  setup.py
.devcontainer/: Dockerfile  devcontainer.json
src/blenderpy/: __init__.py
