[build-system]
requires = [
    "setuptools>=62",
    "wheel",
    "scikit-build>=0.13",
    "cmake",
    "ninja; platform_system!='Windows'",
    "setuptools_scm>=6.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "blenderpy"
description = "Blender as a python module"
version = "3.1.2"
readme = "README.md"
requires-python = "==3.10.*"
license = { file = "LICENSE.txt" }
keywords = [ "Blender" ]
authors = [
    { name = "Blender Foundation", email = "foundation@blender.org" },
]
maintainers = [
    { name = "Stephen A. Imhoff", email = "clockwork-muse@outlook.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GPL License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Multimedia :: Graphics",
]

[project.urls]
homepage = "https://blender.org/"
"Bug Tracker" = "https://github.com/blender/blender/issues"
Packager = "https://github.com/blenderpy/blenderpy.git"
